# ZMP-Preview-Control-WPG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_demo.py
sources/: ZMP Preview Control.ipynb  calc_preview_control.m  create_zmp_trajectory.m  get_preview_control_parameter.m  test_calc_preview_control.m  test_get_preview_control_parameter.m  test_zmp_trajectory.m  wpg_parameter.mat  zmp_feedforwad_control.py
zmp_preview_control/: __init__.py  cli.py  params.py  simulation.py
